# fullscreenizer-rs

./: .gitignore  Cargo.toml  build.rs  readme.md
.cargo/: config.toml
resources/: Manifest.manifest  resources.rc  resources.res
src/: custom_button.rs  custom_dialog.rs  main.rs  my_window.rs
