[package]
name = "fullscreenizer"
version = "1.0.0"
authors = ["Carter Persall <carterpersll@gmail.com>"]
edition = "2024"

[dependencies.winsafe]
#version = "0.0.25"
git = "https://github.com/rodrigocfd/winsafe.git"
rev = "8ce45b3"
features = [
    "advapi",
    "dwm",
    "gui",
    "comctl",
    "user",
    "uxtheme",
    "kernel"
]

[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"