[package]
name = "fullscreenizer"
version = "1.0.0"
authors = ["Carter Persall <carterpersll@gmail.com>"]
edition = "2024"

[dependencies.winsafe]
#version = "0.0.25"
git = "https://github.com/rodrigocfd/winsafe.git"
rev = "ec96b7e"
features = [
    "advapi",
    "dwm",
    "gui",
    "gdi",
    "ole",
    "comctl",
    "user",
    "uxtheme",
    "kernel"
]

[dependencies.windows]
version = "0.62.0"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Imaging",
    "Win32_Storage_EnhancedStorage",
    "Win32_Storage_Packaging_Appx",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Variant",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_UI_WindowsAndMessaging",
]

[build-dependencies]
embed-resource = "3.0.5"

[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"