[package]
name = "fullscreenizer"
version = "1.0.0"
authors = ["Carter Persall <carterpersll@gmail.com>"]
edition = "2024"

[dependencies.winsafe]
#version = "0.0.25"
git = "https://github.com/rodrigocfd/winsafe.git"
rev = "5e46ece"
features = [
    "advapi",
    "dwm",
    "gui",
    "comctl",
    "user",
    "uxtheme",
    "kernel"
]

[build-dependencies]
embed-resource = "3.0.5"

[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"